--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "cz-conventional-changelog": "3.3.0",
     "typescript": "~4.0.0"
   },
-  "private": true
+  "private": true,
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
