--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "lib\\commonjs\\index.js",
   "scripts": {
     "start": "expo start",
-    "build": "tsc",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "storybook": "start-storybook -p 6006"
+    "storybook": "start-storybook -p 6006",
+    "prepare": "bob build"
   },
   "dependencies": {
     "expo": "~41.0.1",
@@ -30,6 +30,7 @@
     "@types/react-native": "~0.63.2",
     "babel-loader": "^8.2.2",
     "cz-conventional-changelog": "3.3.0",
+    "react-native-builder-bob": "^0.18.1",
     "typescript": "~4.0.0"
   },
   "jest": {
@@ -39,6 +40,9 @@
     ],
     "setupFilesAfterEnv": [
       "<rootDir>/__mocks__/globalMock.js"
+    ],
+    "modulePathIgnorePatterns": [
+      "<rootDir>/lib/"
     ]
   },
   "private": true,
@@ -46,5 +50,28 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "react-native": "src\\index.ts",
+  "module": "lib\\module\\index.js",
+  "types": "lib\\typescript\\src\\index.d.ts",
+  "files": [
+    "src",
+    "lib",
+    "!**/__tests__",
+    "!**/__fixtures__",
+    "!**/__mocks__"
+  ],
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      "typescript"
+    ]
+  },
+  "eslintIgnore": [
+    "node_modules/",
+    "lib/"
+  ]
 }
