--- a/docs/package.json
+++ b/docs/package.json
@@ -8,9 +8,14 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "@xstyled/styled-components": "2.4.1",
+    "camara-native": "^1.0.0-beta.15",
     "gatsby": "^2.15.18",
+    "gatsby-plugin-react-helmet": "^4.7.1",
+    "gatsby-plugin-react-native-web": "^3.1.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-helmet": "^6.1.0",
     "smooth-doc": "^5.0.4"
   }
 }
